# streamly-coreutils

./: .cirrus.yml  .packcheck.ignore  CHANGELOG.md  LICENSE  NOTICE  README.md  appveyor.yml  cabal.project  cabal.project.Werror  default.nix  flake.nix  hie.yaml  packages.nix  stack.yaml  streamly-coreutils.cabal
.github/workflows/: haskell.yml
Benchmark/: Coreutils.hs
Benchmark/Coreutils/: Coreutils.hs
app/: hfd.hs
benchmark/: Main.hs
cabal.project.d/: master  master-Werror  streamly-0.10.0  streamly-0.9.0
design/: design-notes.md  design.md  naming.md  proposal.md
src/: Coreutils.hs
src/Coreutils/: Chmod.hs  Common.hs  Cp.hs  Cut.hs  Directory.hs  Dirname.hs  FileTest.hs  Find.hs  Id.hs  Ln.hs  Ls.hs  Mkdir.hs  Mv.hs  ReadLink.hs  ResolvePath.hs  Rm.hs  Sh.hs  Sleep.hs  Stat.hs  String.hs  Tail.hs  Touch.hs  Uniq.hs  Which.hs
src/Coreutils/FileTest/: Common.hs  Posix.hs  Windows.hsc
src/Streamly/: Coreutils.hs
src/Streamly/Coreutils/: Basename.hs  Cat.hs  Chmod.hs  Chown.hs  Common.hs  Cp.hs  Cut.hs  Directory.hs  Dirname.hs  Echo.hs  FileSystem.hs  FileTest.hs  Find.hs  Head.hs  Id.hs  Ln.hs  Ls.hs  Mkdir.hs  Mv.hs  ReadLink.hs  RealPath.hs  ResolvePath.hs  Rm.hs  Rmdir.hs  Sh.hs  ShellWords.hs  Sleep.hs  Stat.hs  String.hs  StringQ.hs  Tail.hs  Touch.hs  Tsort.hs  Types.hs  Uniq.hs  Which.hs  coreutils.hs
src/Streamly/Coreutils/Chmod/: Posix.hs
src/Streamly/Coreutils/FileTest/: Common.hs  Posix.hs  Windows.hs  Windows.hsc
test/: Common.hs  Main.hs
test/Streamly/: Coreutils.hs  test-streaming.hs
test/Streamly/Test/Coreutils/: Rm.hs
