cabal-version:       2.4
name:                streamly-coreutils
version:             0.1.0.0
synopsis:            GNU Coreutils like API for Streamly
description:
   Port useful commands from the GNU `coreutils` to Haskell functions using
   streamly.

   GNU `coreutils` are commonly used, well known interfaces to perform common
   tasks on POSIX systems. It will be useful to have Haskell implementations of
   these utilities in general and also to utilize the knowledge of these utilities
   gained by programmers, admins, script writers for writing Haskell scripts.

   Some of these, but not all, are available in some existing Haskell libraries in
   some form or other. However, there is no comprehensive collection available,
   performance may not be at par and implementations may not be streaming. The
   goal of this project is to have a comprehensive streaming collection using
   Streamly with performance competitive with that of the C implementations
   where it matters.

homepage:            https://github.com/composewell/streamly-coreutils
bug-reports:         https://github.com/composewell/streamly-coreutils/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies
category:            Streamly, Streaming
stability:           Experimental
build-type:          Simple

extra-source-files:  CHANGELOG.md
                   , README.md
                   , NOTICE
                   , design/proposal.md
                   , design/design-notes.md

common compile-options
    default-language: Haskell2010

    if os(darwin)
      cpp-options:    -DCABAL_OS_DARWIN

    if os(linux)
      cpp-options:    -DCABAL_OS_LINUX

    if os(windows)
      cpp-options:    -DCABAL_OS_WINDOWS

    ghc-options:      -Weverything
                      -Wno-implicit-prelude
                      -Wno-prepositive-qualified-module
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-unsafe
                      -Wno-missing-deriving-strategies
                      -Wno-monomorphism-restriction
                      -Wno-missing-local-signatures
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-missing-exported-signatures

common default-extensions
    default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)

library
  import: compile-options, default-extensions
  build-depends:
      base >= 4.8 && < 5
    , exceptions >= 0.8  && < 0.11
    -- We use internal modules of streamly.
    , streamly == 0.9.0.*
    , streamly-core == 0.1.0
    , time >= 1.9 && < 1.14
    , unix >= 2.7.0 && < 2.8
    , directory >= 1.2.2 && < 1.4
    , filepath >= 1.4 && < 1.5
  hs-source-dirs:      src
  exposed-modules:
      Streamly.Coreutils
    , Streamly.Coreutils.Common
    , Streamly.Coreutils.Cp
    , Streamly.Coreutils.Directory
    , Streamly.Coreutils.Dirname
    , Streamly.Coreutils.Mv
    , Streamly.Coreutils.Stat
    , Streamly.Coreutils.Mkdir
    , Streamly.Coreutils.FileTest
    , Streamly.Coreutils.Ls
    , Streamly.Coreutils.Rm
    , Streamly.Coreutils.String
    , Streamly.Coreutils.ReadLink
    , Streamly.Coreutils.ShellWords
    , Streamly.Coreutils.Sleep
    , Streamly.Coreutils.Touch
    , Streamly.Coreutils.Uniq
    , Streamly.Coreutils.Which
    , Streamly.Coreutils.Ln

  default-language:    Haskell2010

-------------------------------------------------------------------------------
-- Benchmarks
-------------------------------------------------------------------------------

benchmark coreutils-bench
  import: compile-options
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: Main.hs
  build-depends:
      streamly-coreutils
    , streamly
    , base              >= 4.8   && < 5
    , gauge             >= 0.2.4 && < 0.3
    , random            >= 1.0.0 && < 2
  default-language: Haskell2010

-------------------------------------------------------------------------------
-- Test suites
-------------------------------------------------------------------------------

test-suite coreutils-test
  import: compile-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      streamly-coreutils
    , streamly
    , streamly-core     == 0.1.0
    , base              >= 4.8   && < 5
  default-language: Haskell2010
