cabal-version:       2.4
name:                streamly-coreutils
version:             0.1.0
synopsis:            GNU Coreutils like API for Haskell
description:
   Streaming Haskell implementations of GNU coreutils, built on
   Streamly.  Provides familiar, composable, high-performance,
   concurrent, streaming equivalents of common POSIX utilities, designed
   for idiomatic Haskell scripting and systems programming.

homepage:            https://github.com/composewell/streamly-coreutils
bug-reports:         https://github.com/composewell/streamly-coreutils/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies
category:            Streamly, Streaming
stability:           Experimental
build-type:          Simple

tested-with:
    GHC==9.14.1
  , GHC==9.12.4
  , GHC==9.10.3
  , GHC==9.8.4
  , GHC==9.6.3
  , GHC==9.4.7
  , GHC==9.2.8
  , GHC==8.10.7

extra-doc-files:
    CHANGELOG.md
  , README.md
  , NOTICE
  , design/proposal.md
  , design/design-notes.md

common compile-options
    default-language: Haskell2010

    if os(darwin)
      cpp-options:    -DCABAL_OS_DARWIN

    if os(linux)
      cpp-options:    -DCABAL_OS_LINUX

    if os(windows)
      cpp-options:    -DCABAL_OS_WINDOWS

    ghc-options:      -Weverything
                      -Wno-implicit-prelude
                      -Wno-prepositive-qualified-module
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-unsafe
                      -Wno-missing-deriving-strategies
                      -Wno-monomorphism-restriction
                      -Wno-missing-local-signatures
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-missing-exported-signatures
                      -Wno-missing-kind-signatures
    if impl(ghc >= 9.8)
      ghc-options:    -Wno-missing-role-annotations

common default-extensions
    default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)

library
  import: compile-options, default-extensions
  build-depends:
      base >= 4.8 && < 5
    , directory >= 1.2.2 && < 1.4
    , exceptions >= 0.8  && < 0.11
    , filepath >= 1.4 && < 1.6
    -- We use internal modules of streamly.
    , streamly >= 0.11 && < 0.12
    , streamly-core >= 0.3 && < 0.4
    , streamly-process >= 0.4 && < 0.5
    , time >= 1.9 && < 1.15
    , unix-compat >= 0.5.4  && < 0.8
  if !os(windows)
      build-depends:  unix >= 2.7.0 && < 2.9
  else
      build-depends: Win32 >= 2.6 && < 2.15

  hs-source-dirs:      src
  exposed-modules:
      Streamly.Coreutils
    , Streamly.Coreutils.Common
    , Streamly.Coreutils.Cp
    , Streamly.Coreutils.Directory
    , Streamly.Coreutils.Dirname
    , Streamly.Coreutils.FileTest
    , Streamly.Coreutils.Ln
    , Streamly.Coreutils.Cut
    , Streamly.Coreutils.Ls
    , Streamly.Coreutils.Mkdir
    , Streamly.Coreutils.Mv
    , Streamly.Coreutils.ReadLink
    , Streamly.Coreutils.Rm
    , Streamly.Coreutils.Sh
    , Streamly.Coreutils.Sleep
    , Streamly.Coreutils.Stat
    , Streamly.Coreutils.Tail
    , Streamly.Coreutils.Touch
    , Streamly.Coreutils.Which
    , Streamly.Coreutils.FileTest.Common
  if os(windows)
      exposed-modules:
          Streamly.Coreutils.FileTest.Windows
  else
      exposed-modules:
          Streamly.Coreutils.FileTest.Posix
        , Streamly.Coreutils.Id
  other-modules:
      Streamly.Coreutils.String
    , Streamly.Coreutils.Uniq

  default-language:    Haskell2010

-------------------------------------------------------------------------------
-- Benchmarks
-------------------------------------------------------------------------------

-- benchmark coreutils-bench
--   import: compile-options
--   type: exitcode-stdio-1.0
--   hs-source-dirs: benchmark
--   main-is: Main.hs
--   build-depends:
--       streamly-coreutils
--     , streamly-core
--     , base              >= 4.8   && < 5
--     , gauge             >= 0.2.4 && < 0.3
--     , random            >= 1.0.0 && < 2
--   default-language: Haskell2010

-------------------------------------------------------------------------------
-- Test suites
-------------------------------------------------------------------------------

test-suite Streamly.Coreutils.Rm
  import: compile-options
  type: exitcode-stdio-1.0
  main-is: Streamly/Test/Coreutils/Rm.hs
  hs-source-dirs: test
  build-depends:
      base
    , directory
    , filepath
    , hspec
    , streamly-coreutils
    , temporary
    , unix-compat
  default-language: Haskell2010
  ghc-options: -main-is Streamly.Test.Coreutils.Rm.main
