cabal-version:       2.4
name:                streamly-coreutils
version:             0.1.0
synopsis:            GNU Coreutils like API for Haskell
description:
   Streaming Haskell implementations of GNU coreutils, built on
   Streamly.  Provides familiar, composable, high-performance,
   concurrent, streaming equivalents of common POSIX utilities, designed
   for idiomatic Haskell scripting and systems programming.

homepage:            https://github.com/composewell/streamly-coreutils
bug-reports:         https://github.com/composewell/streamly-coreutils/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies
category:            Streamly, Streaming
stability:           Experimental
build-type:          Simple

tested-with:
    GHC==9.14.1
  , GHC==9.12.4
  , GHC==9.10.3
  , GHC==9.8.4
  , GHC==9.6.3
  , GHC==9.4.7
  , GHC==9.2.8
  , GHC==8.10.7

extra-doc-files:
    CHANGELOG.md
  , README.md
  , NOTICE
  , design/*.md

source-repository head
    type: git
    location: https://github.com/composewell/streamly-coreutils

-- Keep default False, haddock fails with it in some cases, not sure if hackage
-- haddock will work correctly.
flag fusion-plugin
  description: Use fusion plugin for best performance
  manual: True
  default: False

common compile-options
    default-language: Haskell2010

    if os(darwin)
      cpp-options:    -DCABAL_OS_DARWIN

    if os(linux)
      cpp-options:    -DCABAL_OS_LINUX

    if os(windows)
      cpp-options:    -DCABAL_OS_WINDOWS

    ghc-options:      -Weverything
                      -Wno-implicit-prelude
                      -Wno-prepositive-qualified-module
                      -Wno-missing-import-lists
                      -Wno-missing-safe-haskell-mode
                      -Wno-unsafe
                      -Wno-missing-deriving-strategies
                      -Wno-monomorphism-restriction
                      -Wno-missing-local-signatures
                      -Wno-missed-specialisations
                      -Wno-all-missed-specialisations
                      -Wno-missing-exported-signatures
                      -Wno-missing-kind-signatures
    if impl(ghc >= 9.8)
      ghc-options:    -Wno-missing-role-annotations

common default-extensions
    default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)

common exe-dependencies
  build-depends:
      base
    , optparse-applicative >= 0.17 && < 0.20
    , streamly
    , streamly-core
    , streamly-coreutils

common perf-options
  ghc-options: -O2
               -fdicts-strict
               -fspec-constr-recursive=16
               -fmax-worker-args=16
               -Wall
               -Wcompat
               -Wunrecognised-warning-flags
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints
               -Wnoncanonical-monad-instances
  if impl(ghc >= 9.8)
    ghc-options: -Wno-x-partial

  if flag(fusion-plugin)
    ghc-options: -fplugin Fusion.Plugin
    build-depends:
        fusion-plugin >= 0.2.6 && < 0.3

common exe-options
  import: exe-dependencies, perf-options
  default-language: Haskell2010
  hs-source-dirs: app

common exe-options-threaded
  import: exe-options
  ghc-options: -threaded
               -with-rtsopts=-N

library
  import: compile-options, default-extensions, perf-options
  build-depends:
      base >= 4.8 && < 5
    , directory >= 1.2.2 && < 1.4
    , exceptions >= 0.8  && < 0.11
    , filepath >= 1.4 && < 1.6
    -- We use internal modules of streamly.
    , streamly >= 0.11 && < 0.12
    , streamly-core >= 0.3 && < 0.4
    , streamly-process >= 0.4 && < 0.5
    , time >= 1.9 && < 1.16
    , unix-compat >= 0.5.4  && < 0.8
  if !os(windows)
      build-depends:  unix >= 2.7.0 && < 2.9
  else
      build-depends: Win32 >= 2.6 && < 2.15

  hs-source-dirs:      src
  exposed-modules:
      Streamly.Coreutils.Chmod
    , Streamly.Coreutils.Cp
    , Streamly.Coreutils.Cut
    , Streamly.Coreutils.Directory
    , Streamly.Coreutils.Dirname
    , Streamly.Coreutils.FileTest
    , Streamly.Coreutils.Find
    , Streamly.Coreutils.Ln
    , Streamly.Coreutils.Ls
    , Streamly.Coreutils.Mkdir
    , Streamly.Coreutils.Mv
    , Streamly.Coreutils.ReadLink
    , Streamly.Coreutils.ResolvePath
    , Streamly.Coreutils.Rm
    , Streamly.Coreutils.Sh
    , Streamly.Coreutils.Sleep
    , Streamly.Coreutils.Stat
    , Streamly.Coreutils.Tail
    , Streamly.Coreutils.Touch
    , Streamly.Coreutils.Which
  if os(windows)
      exposed-modules:
          Streamly.Coreutils.FileTest.Windows
  else
      exposed-modules:
          Streamly.Coreutils.FileTest.Posix
        , Streamly.Coreutils.Id
  other-modules:
      Streamly.Coreutils
    , Streamly.Coreutils.Common
    , Streamly.Coreutils.FileTest.Common
    , Streamly.Coreutils.String
    , Streamly.Coreutils.Uniq

  default-language:    Haskell2010

executable hfd
  import: compile-options, default-extensions, exe-options-threaded
  main-is: hfd.hs
  if os(windows)
    buildable: False

-------------------------------------------------------------------------------
-- Benchmarks
-------------------------------------------------------------------------------

-- benchmark coreutils-bench
--   import: compile-options
--   type: exitcode-stdio-1.0
--   hs-source-dirs: benchmark
--   main-is: Main.hs
--   build-depends:
--       streamly-coreutils
--     , streamly-core
--     , base              >= 4.8   && < 5
--     , gauge             >= 0.2.4 && < 0.3
--     , random            >= 1.0.0 && < 2
--   default-language: Haskell2010

-------------------------------------------------------------------------------
-- Test suites
-------------------------------------------------------------------------------

test-suite Streamly.Coreutils.Rm
  import: compile-options
  type: exitcode-stdio-1.0
  main-is: Streamly/Test/Coreutils/Rm.hs
  hs-source-dirs: test
  build-depends:
      base
    , directory
    , filepath
    , hspec
    , streamly-core
    , streamly-coreutils
    , temporary
    , unix-compat
  default-language: Haskell2010
  ghc-options: -main-is Streamly.Test.Coreutils.Rm.main
